# autoref

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  COMPILE.md  COPYING  Dockerfile  README.md  build.sh  docker-compose.yml  docker-entry.bash  install_ubuntu_deps.sh
.github/workflows/: publish-docker.yml
autoref/: .luacheckrc  attackerdefareadist.lua  attackerindefensearea.lua  attackertouchkeeper.lua  attackertouchrobotindefarea.lua  ballholding.lua  ballobserver.lua  ballplacement.lua  chooseteamsides.lua  collision.lua  doubletouch.lua  dribbling.lua  event.lua  eventvalidator.lua  fastshot.lua  freekickdistance.lua  gamecontroller.lua  gameevent2019.lua  gameevents.lua  init.lua  keeperballholding.lua  kickoffstart.lua  kicktimeout.lua  multipledefender.lua  noprogress.lua  numberofplayers.lua  outoffield.lua  parameters  penaltystart.lua  placementinterference.lua  pushing.lua  ruleset.lua  stopballdistance.lua  stopspeed.lua
autoref/base/: amun.lua  ball.lua  ballowner.lua  base.lua  debug.lua  debugger.lua  field.lua  io.lua  parameters.lua  process.lua  processor.lua  referee.lua  robot.lua  typecheck.lua  vector.lua  vis.lua  world.lua
autoref/rules/: attackerdefareadist.lua  attackerindefensearea.lua  ballplacement.lua  collision.lua  doubletouch.lua  dribbling.lua  fastshot.lua  freekickdistance.lua  gameevent2019.lua  multipledefender.lua  outoffield.lua  placementinterference.lua  rule.lua  stopspeed.lua
autoref/validation-rules/: doubletouch.lua  fastshot.lua  freekickdistance.lua  lasttouch.lua  outoffield.lua  placementsuccess.lua  trueworld.lua
base/: amun.lua  ball.lua  ballowner.lua  base.lua  basedir.lua  cache.lua  constants.lua  coordinates.lua  debug.lua  debugcommands.lua  debugger.lua  entrypoints.lua  field.lua  generation.lua  geom.lua  globalschecker.lua  io.lua  math.lua  mixedteam.lua  parameters.lua  path.lua  plot.lua  process.lua  refbox.lua  referee.lua  robot.lua  table.lua  trajectory.lua  typecheck.lua  vector.lua  vis.lua  world.lua
base/robots/: generation2012.lua  generation2014.lua
cmake/: AddTests.cmake  excluded-tests  run_autoref_tests.py
config/field-properties/: field.txt
data/pkg/: autoref.desktop.in  autoref.icns  autoref.rc
data/scripts/: autoreftesthelper.lua
hooks/: pre_build
src/: CMakeLists.txt  config.h.in
src/backend/: CMakeLists.txt  amun.cpp  amun.h  udpmulticaster.cpp  udpmulticaster.h  visiontrackedpublisher.cpp  visiontrackedpublisher.h
src/backend/include/amun/: amun.h
src/cli/: CMakeLists.txt  autorefcli.cpp
src/config/include/config/: config.h.in
src/gui/: CMakeLists.txt  autoref.cpp  autorefteamwidget.cpp  autorefteamwidget.h  ballspeedplotter.cpp  ballspeedplotter.h  ballspeedplotter.ui  configdialog.cpp  configdialog.h  configdialog.ui  infoboard.cpp  infoboard.h  infoboard.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  teamscorewidget.cpp  teamscorewidget.h  teamscorewidget.ui  teamwidget.cpp  teamwidget.h
